# kontra

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE.txt  README.md  kontra-config.cmake.in
build_linux/: KontraConfig.cmake  run_border_example  run_button_example  run_flex_example  run_input_box_example  run_list_example  run_main  run_todo_showcase  test_button  test_input  test_main
build_linux/examples/: run_border_example  run_button_example  run_checkbox_example  run_flex_example  run_input_box_example  run_list_example  run_main  run_scroll_example  run_text_example  run_todo_showcase
build_windows/Debug/: kontra.lib
build_windows/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
build_windows/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
examples/: CMakeLists.txt  border_example.cpp  box_example.cpp  button_example.cpp  checkbox_example.cpp  flex_example.cpp  input_box_example.cpp  list_example.cpp  main.cpp  mouse_input_test.cpp  mouse_scroll_example.cpp  radio_example.cpp  tabs_example.cpp  text_example.cpp
examples/showcase/: todo_app_showcase.cpp
include/: kontra.hpp
include/core/: ansi.hpp  border.hpp  box.hpp  button.hpp  checkbox.hpp  component.hpp  event.hpp  flex.hpp  input.hpp  input_box.hpp  list.hpp  radio-group.hpp  radio.hpp  runtime.hpp  screen.hpp  screen_buffer.hpp  tabs.hpp  terminal.hpp  text.hpp  utils.hpp
src/core/: border.cpp  box.cpp  button.cpp  checkbox.cpp  component.cpp  flex.cpp  input.cpp  input_box.cpp  list.cpp  radio-group.cpp  radio.cpp  runtime.cpp  screen.cpp  tabs.cpp  terminal.cpp  text.cpp
test/: button.cpp  input_box.cpp  main.cpp  todo_app.cpp
web/: eslint.config.js  next-sitemap.config.cjs  next.config.js  package.json  pnpm-lock.yaml
web/public/: robots.txt  sitemap-0.xml  sitemap.xml
web/src/: fonts.ts
web/src/app/: layout.tsx  not-found.tsx  page.tsx
web/src/app/about/: page.tsx
web/src/app/docs/: layout.tsx
web/src/app/docs/[...slug]/: page.tsx
web/src/components/: ButtonLink.tsx  CodeBlock.tsx  Corner.tsx  DocSkeleton.tsx  Footer.tsx  MDXComponents.tsx  MDXRenderer.tsx  Navbar.tsx  PreviousAndNext.tsx  Sidebar.tsx  text-utils.tsx
web/src/components/home/: Branding.tsx  ComponentsShowcase.tsx  Conclusion.tsx  CustomizabilityShowcase.tsx  InteractivityShowcase.tsx  UtilityShowcase.tsx
web/src/docs/: 1.getting-started.mdx  2.installation.mdx  3.hello-world.mdx  4.ansi.mdx  5.todo-app.mdx  6.event-handling.mdx  7.style-builder.mdx  getting-started.mdx
web/src/docs/components/: border.mdx  button.mdx  checkbox.mdx  flex.mdx  input.mdx  list.mdx  radio-buttons.mdx  tabs.mdx  text.mdx
web/src/lib/: get-all-docs-meta.ts  mdx.ts  utils.tsx
web/src/styles/: globals.css
